Courtney Cavin - Fri Feb 14 2005
	changed some mp3 error messages to pz_perror
	mini-ized textviewer and fixed a few small bugs
	
Courtney Cavin - Fri Feb 12 2005
	global error functions added
	please use pz_error for custom errors & pz_perror for errno based ones 
	allowed for KEY_UP events to be recognized by applications

Courtney Cavin - Fri Feb 11 2005
	new_message_window now wraps lines

Courtney Cavin - Fri Feb 11 2005
	enabled browser execution
	 - open apps in a seperate virtual terminal
	 - return to podzilla when execution finished

Matthis - Tue Feb 08 2005
	bluecube changes:
	 - falling cubes are colored when falling and white when fell
	 - movement left-right with the scroll wheel, adapted wheel sensitivity
	 - high score

Alastair S - Tue Feb 08 2005
	MAX_MENU_ITEMS is now a variable
	menu, Pong, Nimesweeper, and browser are now relative to screen size
	can now unflag mines in Nimesweeper
	battery image is now relative to the right side of the screen

Bernard Leach - Friday Feb 04 2005
	added support for remote in mp3 & wav playback

Prashant V - Friday Feb 04 2005
	added music suffle/repeat
	only playback mp3 files (skips files not ending in .mp3)
	added Song queuing with next & previous support

Courtney Cavin - Fri Feb 04 2005
	textviewer has better memory management
	 - no longer crashes on particular files
	 - malloc/free's replaced with realloc's
	filebrowser now opens any ascii file, including those in /proc
	string viewing can now be done with new_stringview_window

David Carne - Thursday Feb 03 2005
	semi-fixed volume scroll for mp3 playback

Fredrik Bergholtz - Sat Jan 22 2005
	added exhaust vapour to Steroids ship

Courtney Cavin - Sat Jan 22 2005
	.jpeg; .pnm; and .xcf extentions now open
	fixed about, the scrolling was a little funky/incorrect

Cameron Nishiyama - Sat Jan 22 2005
	image viewer scaling and zooming added
	image extentions are no longer case sensitive

Scott Lawrence - Sat Jan 22 2005